         contributed by Rhett Sutphin.
       - Fixed status description lost when throwing ResourceException
         inside the deprecated Resource class.
         Reported by Rhett Sutphin.         
       - Fixed ConnegUtils#getPreferredMetadata algorithm.
         Reported by Rickard Oberg.
       - Fixed lack of "Vary" HTTP header with HEAD calls on the
         ServerResource class.
         
- 2.0.3 (2010-11-07)
    - Bugs fixed
       - Fixed Representation#availableSize computation issue when
         total size is unknown and fixed ranged entity writing.
       - Fixed generation of GWT proxies. Reported by Evan Wang.

- 2.0.2 (2010-11-03)
    - Bugs fixed
       - Fixed bug in Netty HTTPS connector preventing the handling
         of several connections, persistent connections and chunked
         encoding. Reported by Laurent Rustuel.
       - Fixed issue with Netty when an unknown parameter was passed.
       - Fixed content negotiation issues with methods accepting 
         Representation parameters or returning Representation 
         instances. Reported by Dustin Jenkins.
       - Fixed potential thread blocks due to CountDownLatch.await()
         calls. They now properly time out. Suggested by Tim Peierls.
       - Fixed initialization of the ClientInfo#userAgentTemplates 
         static variable. Reported by Michael Terrington.
       - Fixed the Content-length header sent by HEAD responses.
         Reported by Nicolas Rinaudo.
       - Fix bug with automatic redirects by Directory when the URI
         contains query parameters. Reported by William Pietri.
       - Internal HTTP client now uses absolute URIs for proxies 
         requests.
       - Redirector supports relative URIs again. 
         Contributed by Marc Portier.
       - Fixed bug when using the internal client in Sun Applet Viewer.
         Reported by Darin Jackson.
       - Fixed bug when an URI was included in the URI query or 
         fragment.